--- a/res/xml/gesture_navigation_settings.xml
+++ b/res/xml/gesture_navigation_settings.xml
@@ -23,12 +23,25 @@
     android:title="@string/gesture_settings_activity_title"
     settings:keywords="@string/keywords_gesture_navigation_settings">
 
+    <SwitchPreference
+        android:key="enable_taskbar"
+        android:title="@string/navigation_bar_enable_taskbar_title"
+        android:summary="@string/navigation_bar_enable_taskbar_summary" />
+
     <lineageos.preference.LineageSystemSettingSwitchPreference
         android:key="navigation_bar_hint"
         android:title="@string/show_navbar_hint_title"
         android:summary="@string/show_navbar_hint_summary"
         android:defaultValue="true"
         settings:requiresPackage="org.lineageos.overlay.customization.navbar.nohint" />
+
+    <ListPreference
+        android:key="navigation_bar_edge_long_swipe"
+        android:dialogTitle="@string/navigation_bar_edge_long_swipe_title"
+        android:title="@string/navigation_bar_edge_long_swipe_title"
+        android:entries="@array/hardware_keys_action_entries"
+        android:entryValues="@array/hardware_keys_action_values"
+        android:persistent="false" />
 
     <PreferenceCategory
         android:key="assistant_gesture_category"
