--- a/res/values/extra_strings.xml
+++ b/res/values/extra_strings.xml
@@ -74,6 +74,14 @@
     <string name="home_answer_call_title">Home button answer call</string>
     <string name="volume_answer_call_title">Volume button answer call</string>
 
+    <!-- Waking button accessibility -->
+    <string name="volume_button_wake_title">Volume button wake device</string>
+    <string name="home_button_wake_title">Home button wake device</string>
+    <string name="back_button_wake_title">Back button wake device</string>
+    <string name="menu_button_wake_title">Menu button wake device</string>
+    <string name="assist_button_wake_title">Assist button wake device</string>
+    <string name="app_switch_button_wake_title">Recents button wake device</string>
+
     <!-- Navigation bar -->
     <string name="navigation_bar_invert_layout_title">Invert layout</string>
     <string name="navigation_bar_invert_layout_summary">Inverts the layout of the navigation bar and other items, such as the IME switcher</string>
@@ -96,10 +104,40 @@
     <string name="hardware_keys_action_kill_app">Kill foreground app</string>
 
     <!-- Taskbar -->
-    <string name="navigation_bar_enable_taskbar_title">Enable taskbar</string>
+    <string name="navigation_bar_enable_taskbar_title">Taskbar</string>
+    <string name="navigation_bar_enable_taskbar_summary">Quickly launch apps from system navigation</string>
+    <string name="navigation_bar_enable_taskbar_disabled_gesture">To enable, first change navigation mode to the gesture navigation</string>
+    <string name="navigation_bar_enable_taskbar_disabled_button">To enable, first change navigation mode to the 3-button navigation</string>
 
     <!-- Gesture navigation -->
     <string name="navigation_bar_edge_long_swipe_title">Edge long swipe action</string>
 
-    <string name="disable_navkeys_title">Physical button navigation</string>
+    <!-- Physical button navigation -->
+    <string name="physical_button_navigation_title">Physical button navigation</string>
+    <string name="physical_button_navigation_summary">Go back, Home, and switch apps with physical button.</string>
+    <string name="hardware_keys_back_long_press_title">@string/navigation_bar_back_long_press_title</string>
+    <string name="hardware_keys_home_long_press_title">@string/navigation_bar_home_long_press_title</string>
+    <string name="hardware_keys_home_double_tap_title">@string/navigation_bar_home_double_tap_title</string>
+    <string name="hardware_keys_menu_short_press_title">Menu button tap action</string>
+    <string name="hardware_keys_menu_long_press_title">Menu button long press action</string>
+    <string name="hardware_keys_assist_short_press_title">Search button tap action</string>
+    <string name="hardware_keys_assist_long_press_title">Search button long press action</string>
+    <string name="hardware_keys_app_switch_short_press_title">Recents button tap action</string>
+    <string name="hardware_keys_app_switch_long_press_title">@string/navigation_bar_app_switch_long_press_title</string>
+    <string name="swap_capacitive_keys_title">Swap capacitive buttons</string>
+    <string name="swap_capacitive_keys_summary">Swap the order of recents and back buttons</string>
+
+    <!-- Key backlight -->
+    <string name="button_backlight_title">Backlight</string>
+    <string name="button_backlight_enabled">Illuminate buttons</string>
+    <string name="button_backlight_only_when_pressed_title">Illuminate buttons only when pressed</string>
+    <string name="keyboard_backlight_enabled">Illuminate keyboard</string>
+    <string name="button_backlight_seekbar_title">Button brightness</string>
+    <string name="keyboard_backlight_seekbar_title">Keyboard brightness</string>
+    <string name="backlight_timeout_title">Illumination timeout</string>
+    <string name="backlight_timeout_unlimited">Don\'t turn off</string>
+    <string name="backlight_summary_disabled">Disabled</string>
+    <string name="backlight_summary_enabled_with_timeout">Enabled for <xliff:g id="timeout">%s</xliff:g></string>
+    <string name="backlight_summary_enabled">Enabled</string>
+    <string name="reset">Reset</string>
 </resources>
