--- a/res/xml/button_navigation_settings.xml
+++ b/res/xml/button_navigation_settings.xml
@@ -38,7 +38,8 @@
 
     <SwitchPreference
         android:key="enable_taskbar"
-        android:title="@string/navigation_bar_enable_taskbar_title" />
+        android:title="@string/navigation_bar_enable_taskbar_title"
+        android:summary="@string/navigation_bar_enable_taskbar_summary" />
 
     <lineageos.preference.SecureSettingSwitchPreference
         android:key="sysui_nav_bar_inverse"
@@ -60,6 +61,7 @@
         android:title="@string/navigation_bar_home_long_press_title"
         android:entries="@array/hardware_keys_action_entries"
         android:entryValues="@array/hardware_keys_action_values"
+        android:dependency="assistant_long_press_home_gesture"
         android:persistent="false" />
 
     <ListPreference
