--- a/res/xml/gesture_navigation_settings.xml
+++ b/res/xml/gesture_navigation_settings.xml
@@ -25,7 +25,8 @@
 
     <SwitchPreference
         android:key="enable_taskbar"
-        android:title="@string/navigation_bar_enable_taskbar_title" />
+        android:title="@string/navigation_bar_enable_taskbar_title"
+        android:summary="@string/navigation_bar_enable_taskbar_summary" />
 
     <lineageos.preference.LineageSystemSettingSwitchPreference
         android:key="navigation_bar_hint"
