--- a/res/xml/two_button_navigation_settings.xml
+++ b/res/xml/two_button_navigation_settings.xml
@@ -56,6 +56,7 @@
         android:title="@string/navigation_bar_home_long_press_title"
         android:entries="@array/hardware_keys_action_entries"
         android:entryValues="@array/hardware_keys_action_values"
+        android:dependency="assistant_long_press_home_gesture"
         android:persistent="false" />
 
     <ListPreference
