--- a/res/xml/firmware_version.xml
+++ b/res/xml/firmware_version.xml
@@ -74,11 +74,10 @@
 
     <!-- Build -->
     <Preference
-        android:key="os_build_number"
+        android:key="build_number"
         android:title="@string/build_number"
         android:summary="@string/summary_placeholder"
-        android:selectable="false"
         settings:enableCopying="true"
-        settings:controller="com.android.settings.deviceinfo.firmwareversion.SimpleBuildNumberPreferenceController"/>
+        settings:controller="com.android.settings.deviceinfo.BuildNumberPreferenceController"/>
 
 </PreferenceScreen>
