--- a/res/xml/my_device_info.xml
+++ b/res/xml/my_device_info.xml
@@ -225,12 +225,14 @@
 
         <!-- Build number -->
         <Preference
-            android:key="build_number"
+            android:key="os_build_number"
             android:order="53"
             android:title="@string/build_number"
             android:summary="@string/summary_placeholder"
+            android:selectable="false"
             settings:enableCopying="true"
-            settings:controller="com.android.settings.deviceinfo.BuildNumberPreferenceController"/>
+            settings:controller="com.android.settings.deviceinfo.firmwareversion.SimpleBuildNumberPreferenceController"/>
+
     </PreferenceCategory>
 
 </PreferenceScreen>
